infra/enterprise-cloud/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: avos-enterprise
  labels:
    app.kubernetes.io/part-of: avos-enterprise
